Improve Sudoku Styles
For now, I'm hiding the clues until I create better styles for them.

--- a/src/app/sudoku-cell/sudoku-cell.component.html
+++ b/src/app/sudoku-cell/sudoku-cell.component.html
@@ -1,6 +1,7 @@
 @if (cell?.value) {
   <div class="value">{{ cell?.value }} </div>
-} @else {
+}
+<!-- @else {
   <table>
     <tr>
       <td>
@@ -51,4 +52,4 @@
       </td>
     </tr>
   </table>
-}
+} -->
