--- a/src/app/sudoku-plane/sudoku-plane.component.css
+++ b/src/app/sudoku-plane/sudoku-plane.component.css
@@ -1,3 +1,35 @@
-td {
-  border: 1px solid black;
+.cell {
+  width: 24px;
+  height: 24px;
 }
+
+/* 1,3,5,7 */
+.row .cell:nth-child(2n + 1) {
+  border-right: 1px solid black;
+  border-left: 3px solid black;
+}
+
+/* 2,4,6,8 */
+.row .cell:nth-child(2n) {
+  border: 0px;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+}
+
+.plane .row:nth-child(2n + 1) {
+  border-top: 3px solid black;
+  border-bottom: 1px solid black;
+}
+
+.plane .row:nth-child(2n) {
+  border: 0px;
+}
+
+.plane {
+  border-right: 3px solid black;
+  border-bottom: 3px solid black;
+}
+
